tests/samples/negative/visibility/private_qualified_const.ax
module private_qualified_const;

import samplelib.visibility as vis;

fn main() -> i32 {
    return vis.hidden_answer;
}
